# spectacular

claude-chat/: .gitignore  README.md
claude-chat/backend/: .env.example  interceptor.py  pyproject.toml  seed_subagents.py
claude-chat/backend/src/claude_chat/: auth_manager.py  config.py  credential_vault.py  db.py  main.py  migrate.py  models.py  process_manager.py  routes.py  schemas.py  settings_routes.py
claude-chat/backend/src/claude_chat/agent/: __init__.py  coding_agent.py  deps.py  tools.py
claude-chat/backend/src/claude_chat/providers/: __init__.py  claude_cli.py  events.py  factory.py  pydantic_ai_mapper.py  pydantic_ai_provider.py
claude-chat/backend/tests/: test_cli_adapter.py  test_vault.py
claude-chat/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
claude-chat/frontend/src/: App.tsx  ClaudeLoginModal.tsx  MarkdownMessage.tsx  ProviderModelPicker.tsx  SettingsPanel.tsx  api.ts  styles.css  types.ts
